# rkmpp_player

./: CMakeLists.txt  README.md  main.c  mppdecoder.c  mppdecoder.h
rkdrm/: rkdrm.c
